fix last contrast error of profile page to pass WAVE WebAIM test

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2237,9 +2237,9 @@ html {
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
+.bg-red-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
